--- a/index.html
+++ b/index.html
@@ -1751,7 +1751,7 @@ using <a href="https://github.com/WebOfTrustInfo/rwot6-santabarbara/blob/master/
 </section> <!-- Alice Rents a car -->
 
 <section id="messaging">
-      <h3>Secure Messaging (consumer)</h3>
+      <h3>Secure Messaging (communication)</h3>
       <section id="messagingBackground">
         <h4>Background</h4>
         <p>
