Fixing ref to registries

--- a/index.html
+++ b/index.html
@@ -625,8 +625,8 @@ cryptographically-verifiable.
   A particular point to bear in mind is that not all DID methods require DIDs to be registered to be functional.</p>-->
 
 <p>When we refer to <em>methods</em> and <em>registries</em>, we mean <a><abbr
-  title="Decentralized Identifier">DID</abbr> methods</a> and <a><abbr title="Decentralized
-  Identifier">DID</abbr> registries</a>. A working assumption for the use cases is that all
+  title="Decentralized Identifier">DID</abbr> methods</a> and <a>verifiable data registries</a>. 
+	A working assumption for the use cases is that all
   <abbr title="Decentralized Identifier">DID</abbr>s resolve to <abbr title="Decentralized
   Identifier">DID</abbr> Documents. <abbr title="Decentralized Identifier">DID</abbr>
   Documents contain the cryptographic material to perform the functions related to
