Filtering out unused terminology terms

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ example would be proving control of the private key associated with a public
 key published in a <a>DID document</a>.
   </dd>
 
-  <dt><dfn data-lt="blockchains|blockchain technology|blockchain" id="dfn-blockchains">blockchain</dfn></dt>
+<!--  <dt><dfn data-lt="blockchains|blockchain technology|blockchain" id="dfn-blockchains">blockchain</dfn></dt>
 
   <dd>
 A specific type of <a>distributed ledger technology</a> (DLT) in which ledger
@@ -299,14 +299,14 @@ hashed into a cryptographic chain. Because this type of <a>DLT</a> was
 introduced by <a href="https://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a>, the
 term <em>blockchain</em> is sometimes used to refer specifically to the Bitcoin
 ledger.
-  </dd>
+  </dd> -->
 
-  <dt><dfn id="dfn-binding">binding</dfn></dt>
+<!--  <dt><dfn id="dfn-binding">binding</dfn></dt>
   <dd>
 A concrete mechanism used by a caller to invoke a <a>DID resolver</a> or a
 <a>DID URL dereferencer</a>. This could be a local command line tool, a
 software library, or a network call such as an HTTPS request.
-  </dd>
+  </dd> -->
 
   <dt><dfn data-lt="decentralized identifiers|DID|DIDs|decentralized identifier" data-plurals="dids|did" id="dfn-decentralized-identifiers">decentralized identifier</dfn> (DID)</dt>
 
@@ -320,7 +320,7 @@ Many—but not all—DID methods make use of <a>distributed ledger technology</a
 (DLT) or some other form of decentralized network.
   </dd>
 
-  <dt><dfn id="dfn-decentralized-identity-management">decentralized identity management</dfn></dt>
+  <!-- <dt><dfn id="dfn-decentralized-identity-management">decentralized identity management</dfn></dt>
 
   <dd>
 <a href="https://en.wikipedia.org/wiki/Identity_management">identity
@@ -330,9 +330,9 @@ registration, and assignment beyond traditional roots of trust such as
 <a href="https://en.wikipedia.org/wiki/X.500">X.500 directory services</a>,
 the <a href="https://en.wikipedia.org/wiki/Domain_Name_System">Domain Name System</a>,
 and most national ID systems.
-  </dd>
+  </dd> -->
 
-  <dt><dfn id="dfn-decentralized-public-key-infrastructure">decentralized public key infrastructure</dfn> (DPKI)</dt>
+ <!-- <dt><dfn id="dfn-decentralized-public-key-infrastructure">decentralized public key infrastructure</dfn> (DPKI)</dt>
 
   <dd>
 <a href="https://en.wikipedia.org/wiki/Public_key_infrastructure">Public key
@@ -340,7 +340,7 @@ infrastructure</a> that does not rely on traditional
 <a href="https://en.wikipedia.org/wiki/Certificate_authority">certificate
 authorities</a> because it uses <a>decentralized identifiers</a> and
 <a>DID documents</a> to discover and verify <a>public key descriptions</a>.
-  </dd>
+  </dd> -->
 
   <dt><dfn data-lt="did controllers|did controller(s)|DID controller" id="dfn-did-controllers">DID controller</dfn></dt>
 
@@ -420,14 +420,14 @@ plus additional metadata. This function relies on the "Read" operation of the
 applicable <a>DID method</a>.
   </dd>
 
-  <dt><dfn data-lt="DID resolvers|DID resolver" data-plurals="did resolvers" id="dfn-did-resolvers">DID resolver</dfn></dt>
+  <!--<dt><dfn data-lt="DID resolvers|DID resolver" data-plurals="did resolvers" id="dfn-did-resolvers">DID resolver</dfn></dt>
 
   <dd>
 A <a>DID resolver</a> is a software and/or hardware component that performs the
 <a>DID resolution</a> function by taking a <a>DID</a> as input and producing a
 conforming <a>DID document</a> as output.
   </dd>
-
+-->
   <dt><dfn data-lt="DID schemes|DID scheme" id="dfn-did-schemes">DID scheme</dfn></dt>
 
   <dd>
@@ -498,12 +498,12 @@ to prevent the proof from being misused for a purpose other than the one it was
 intended for.
   </dd>
 
-  <dt><dfn data-plurals="public key descriptions" id="dfn-public-key-description">public key description</dfn></dt>
+  <!--<dt><dfn data-plurals="public key descriptions" id="dfn-public-key-description">public key description</dfn></dt>
 
   <dd>
 A data object contained inside a <a>DID document</a> that contains all the
 metadata necessary to use a public key or verification key.
-  </dd>
+  </dd> -->
 
   <dt><dfn data-lt="resources|resource" id="dfn-resources">resource</dfn></dt>
 
@@ -564,7 +564,7 @@ data structures such as <a>verifiable credentials</a>. For more information, see
 [[VC-DATA-MODEL]].
   </dd>
 
-  <dt><dfn data-plurals="verifiable timestamps" id="dfn-verifiable-timestamp">verifiable timestamp</dfn></dt>
+  <!--<dt><dfn data-plurals="verifiable timestamps" id="dfn-verifiable-timestamp">verifiable timestamp</dfn></dt>
 
   <dd>
 A verifiable timestamp enables a third-party to verify that a data object
@@ -572,7 +572,7 @@ existed at a specific moment in time and that it has not been modified or
 corrupted since that moment in time. If the data integrity could reasonably
 have modified or corrupted since that moment in time, the timestamp is not
 verifiable.
-  </dd>
+  </dd> -->
 
   <dt><dfn data-lt="" data-plurals="verification methods" id="dfn-verification-method">verification method</dfn></dt>
 
@@ -593,16 +593,16 @@ or "proof."
     </p>
   </dd>
 
-  <dt><dfn data-lt="" data-plurals="verification relationships" id="dfn-verification-relationship">verification relationship</dfn></dt>
+  <!--<dt><dfn data-lt="" data-plurals="verification relationships" id="dfn-verification-relationship">verification relationship</dfn></dt>
 
   <dd>
     <p>
 An expression of the relationship between the <a>DID subject</a> and a
 <a>verification method</a>.
     </p>
-  </dd>
+  </dd>-->
 
-  <dt><dfn data-lt="UUID|UUIDs|Universally Unique Identifier" data-plurals="uuid" id="dfn-uuid">Universally Unique Identifier</dfn> (UUID)</dt>
+<!--  <dt><dfn data-lt="UUID|UUIDs|Universally Unique Identifier" data-plurals="uuid" id="dfn-uuid">Universally Unique Identifier</dfn> (UUID)</dt>
 
   <dd>
 A type of globally unique identifier defined by [[RFC4122]]. UUIDs are similar
@@ -610,7 +610,7 @@ to DIDs in that they do not require a centralized registration authority.
 UUIDs differ from DIDs in that they are not resolvable or
 cryptographically-verifiable.
   </dd>
-
+-->
 </dl>
 	    
 	    
