Removing broken internal link

--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@ cryptographically-verifiable.
         <section id="actionSign">
         <h3>Sign</h3>
 		<p>Using cryptographic material associated with that found in a  <a>DID Document</a>, <a>DID Controller</a>s may sign digital
-		assets or documents. This  signature can <a href="#verifySignature">later be verified</a> to demonstrate the
+		assets or documents. This  signature can later be verified to demonstrate the
 		authenticity of the asset. In this way, it should be possible to refer to the asset as "signed  by the DID".</p>
         </section>
         <section id="actionVerifySignature">
