Fixing broken GH link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         // extend the bibliography entries
         localBiblio: didwg.localBiblio,
 
-        github: "https://github.com/w3c/did-use-cases",
+        github: {"repoURL": "https://github.com/w3c/did-use-cases", "branch": "master"},
         includePermalinks: false,
 
         // if there a publicly available Editor's Draft, this is the link
