Couple of unnecessary redirects cleaned up

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ software library, or a network call such as an HTTPS request.
 A globally unique persistent identifier that does not require a centralized
 registration authority because it is generated and/or registered cryptographically.
 The generic format of a DID is defined in the
-<a href="https://w3.org/TR/did-core">DID Core specification</a>.
+DID Core specification [[DID-CORE]].
 A specific <a>DID scheme</a> is defined in a <a>DID method</a> specification.
 Many—but not all—DID methods make use of <a>distributed ledger technology</a>
 (DLT) or some other form of decentralized network.
@@ -1741,7 +1741,7 @@ cryptographically-verifiable.
       </section>
       <section id="eduDescription">
         <h4>Description</h4>
-	      <p>When Sally earned her master&rsquo;s degree at the <a href="http://www.ox.ac.uk/">University of Oxford</a>,
+	      <p>When Sally earned her master&rsquo;s degree at the <a href="https://www.ox.ac.uk/">University of Oxford</a>,
 		      she received a digital diploma that contained a decentralized identifier she provided. This digital diploma is signed using a decentralized
 		      identifier which has been published and verified by the University of Oxford.
 			Over time, she updates the cryptographic material associated with that
