ReSpec config using 'group'

--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
 		  {name: "Ryan Grant", w3cid: 101398},
 		  {name: "Adrian Gropper", w3cid: 91611}],
         wgPublicList: "public-did-wg",
-        wg: "Decentralized Identifier Working Group",
-        wgURI: "https://www.w3.org/2019/did-wg/",
-        wgPatentURI: "https://www.w3.org/2004/01/pp-impl/117488/status",
-	wgId: 117488,
+	group: "did",
         maxTocLevel: 4,
         inlineCSS: true,
 	noRecTrack: true,
