Adding Crypto Auth Com to EDV Use Case

--- a/index.html
+++ b/index.html
@@ -762,7 +762,9 @@ cryptographically-verifiable.
 		<span data-reqid="associatedCrypto"></span>,
 		<span data-reqid="keyRotation"></span>,
     <span data-reqid="noVendorLock"></span>,
-    <span data-reqid="privacyPreserving"></span></p>
+    <span data-reqid="privacyPreserving"></span>
+		<span data-reqid="cryptoAuthComm"></span>,
+</p>
 	<p class="shortUcContributor">Contributed by Digital Bazaar, Transmute &amp; Legendary Requirements</p>
 	</section> <!-- Encrypted Data Vault-->
 
