Use case titles shortened and harmonized
		2.3 Encrypted Data Vault -> Confidential Customer Engagement
		2.5.Identifiers in an ecosystem of verifiable credentials (VCs) -> Transferable Skills Credentials
		2.6 Sharing Opt-in Information across platforms -> Cross-platform User-driven Sharing
		2.7 Collecting payments for work conducted anonymously -> Pseudonymous Work
		6.1 Decentralized Corporate Identifiers -> Enterprise Identifiers
		6.2 Life-long, recipient managed credentials -> Life-long Credentials

--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ cryptographically-verifiable.
 	<p class="shortUcContributor">Contributed by Spherity</p>
 	</section> <!-- Vehicle assemblies -->
 
-	<section id="edv"><h3>Encrypted Data Vault</h3>
+	<section id="edv"><h3>Confidential Customer Engagement</h3>
 	<p>Maria runs a small shopping &amp; delivery service for several dozen shoppers. She uses a DID provided by
 		each shopper to provide secure access to her records of purchases, which include receipts and product
 		names for everything she's ever bought them through her service. As she shops, she scans the products
@@ -787,7 +787,7 @@ cryptographically-verifiable.
 	<p class="shortUcContributor">Contributed by Robert Bosch GmbH</p>
 	</section><!-- service endpoints-->
 
-	<section id="vcEcosystem"><h3>Identifiers in an ecosystem of verifiable credentials (VCs)</h3>
+	<section id="vcEcosystem"><h3>Transferable Skills Credentials</h3>
 		<p>Dixon's employer uses DIDs and <abbr title="Verifiable Credentials">VC</abbr>s to track workplace successes and recognition.
 			Every employee has a DID registered with the company and accessible via the company registry. When he
 			completes a training program &mdash; like CPR or Export Compliance &mdash; or receives an accolade like employee of
@@ -825,7 +825,7 @@ cryptographically-verifiable.
 	</section><!-- VC ecosystem-->
 
 	<section id="crossPlatform">
-          <h3>Sharing opted-in information across platforms</h3>
+          <h3>Cross-platform User-driven Sharing</h3>
 		<p>Franklyn is frustrated by the seemingly endless surveillance that tracks his activity online. He is a
 			single father of two girls whose privacy is absolutely vital to him. He does what he can to minimize
 			the ways in which he might accidentally put his kids at risk, avoiding sharing details of his life,
@@ -880,7 +880,7 @@ cryptographically-verifiable.
 	<p class="shortUcContributor">Suggested by Airgrid</p>
 	</section><!-- Opted-in information -->
 
-	<section id="ghostWriter"><h3>Collecting payments for work conducted anonymously</h3>
+	<section id="ghostWriter"><h3>Pseudonymous Work</h3>
 	<p>Before becoming a full time journalist, Sahar worked many odd jobs and uncredited gigs in the publishing and movie
 	industries: she was a ghostwriter, a scriptfixer, various kinds of editor, a translator, and more. Some of these gigs
 	still pay her residuals years later in the form of tiny micropayments. When these now-classic works are reprinted or
@@ -1592,7 +1592,7 @@ cryptographically-verifiable.
     <section id="focalUseCases">
         <h2>Focal Use Cases</h2>
         <section id="didEnterprise">
-      <h3>Decentralized Corporate Identifiers (enterprise)</h3>
+      <h3>Enterprise Identifiers</h3>
       <section>
         <h4>Background</h4>
         <p>
@@ -1692,7 +1692,7 @@ cryptographically-verifiable.
 
 
     <section id="edu">
-      <h3>Life-long, recipient-managed Credentials (education)</h3>
+      <h3>Life-long Credentials (education)</h3>
 	    <p class="focalContributor">Contributed by Kim Hamilton-Duffy</p>
       <section id="eduBackground">
         <h4>Background</h4>
