Text improvement, thanks
Co-authored-by: Ted Thibodeau Jr <tthibodeau@openlinksw.com>

--- a/index.html
+++ b/index.html
@@ -1649,18 +1649,24 @@ using <a href="https://github.com/WebOfTrustInfo/rwot6-santabarbara/blob/master/
       <section id="messagingBackground">
         <h4>Background</h4>
         <p>
-          Designing systems that securely support the scale of global communication on the Web has traditionally
-		come with a distinct set of tradeoffs that often negatively impact end-users. Current
-		<abbr title="Public Key Infrastructure">PKI</abbr> systems tightly control who gets to manage
-		and control the cryptographic keys associated with the set of digital certificates that serve as
-		the backbone of the internet. This constraint means that modern cryptography is largely unusable for
-		the average user, forcing them to borrow or ‘rent’ identifiers such as email addresses, usernames,
-		and website domains through systems like <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a>,
-		<a href="https://en.wikipedia.org/wiki/X.509">X.509</a>, and <a href="https://en.wikipedia.org/wiki/Social_network">social
-		networks</a>. By not directly controlling their own identifiers, people who want to use secure
-		communication are not only unable to utilize cryptographic security in many of their everyday
-		interactions, they are also limited to choosing between traditional secure messaging services
-		to safely communicate with friends and family in a limited, chat-style context.
+Designing systems that securely support the scale of global communication
+on the Web has traditionally come with a distinct set of tradeoffs that
+often negatively impact end-users. Current <abbr title="Public Key
+Infrastructure">PKI</abbr> systems tightly control who gets to manage
+and control the cryptographic keys associated with the set of digital
+certificates that serve as the backbone of the internet. This constraint
+means that modern cryptography is largely unusable for the average user,
+forcing them to borrow or "rent" identifiers such as email addresses,
+usernames, and website domains, through systems like
+<a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a>,
+<a href="https://en.wikipedia.org/wiki/X.509">X.509</a>, and
+<a href="https://en.wikipedia.org/wiki/Social_network">social
+networks</a>. By not directly controlling their own identifiers, people
+who want to use secure communication are not only unable to utilize
+cryptographic security in many of their everyday interactions, they are
+also limited to choosing between traditional secure messaging services
+to safely communicate with friends and family in a limited, chat-style
+context.
         </p>
         <p>
           In a traditional secure messaging approach the security is a property of the platform; if a user changes
