Improved wording, thanks
Co-authored-by: Ted Thibodeau Jr <tthibodeau@openlinksw.com>

--- a/index.html
+++ b/index.html
@@ -1684,10 +1684,10 @@ context.
 		often have the following drawbacks:
         </p>
         <ul>
-          <li>they rely on commonly used identifiers which are not directly under user control;</li>
-          <li>they use a central intermediary or centralized components to facilitation interactions;</li>
-          <li>they require one or more parties to have a highly available web server;</li>
-          <li>they have siloed and non-interoperable security architectures tied to a single domain.</li>
+          <li>reliance on commonly used identifiers which are not directly under user control</li>
+          <li>use of a central intermediary or centralized components to facilitate interactions</li>
+          <li>requirement that one or more parties have a highly available web server</li>
+          <li>siloed and non-interoperable security architectures tied to a single domain</li>
         </ul>
         <p>
           DIDs help to solve this issue by enabling a style of communication which is truly peer-to-peer and
