More improved wording
Co-authored-by: Ted Thibodeau Jr <tthibodeau@openlinksw.com>

--- a/index.html
+++ b/index.html
@@ -1691,13 +1691,13 @@ In a traditional secure messaging approach the security is a property of the pla
         </ul>
         <p>
           DIDs help to solve this issue by enabling a style of communication which is truly peer-to-peer and
-		messaging-based. Message-based systems decouple the relationship between producers of messages
+		message-based. Message-based systems decouple the relationship between producers of messages
 		and consumers of messages, creating an abstraction that puts the two on equal footing and allows
 		for many different kinds of devices with differing requirements to interface in a flexible
 		and technology-neutral way. DIDs allow people to simultaneously use the same identifier for
-		both traditional communications and transactions that require a level of cryptographic security,
-		as well as switch contexts without losing any security guarantees. These identifiers are not
-		rented or borrowed from centralized providers but are rather directly under user control.
+		both traditional communications and newer transactions that require a higher level of cryptographic security,
+		as well as allowing them to switch contexts without losing any security guarantees. These decentralized identifiers are not
+		rented or borrowed from centralized providers but are instead directly under user control.
         </p>
       </section>
       <section id="messagingDescription">
