--- a/index.html
+++ b/index.html
@@ -1703,7 +1703,7 @@ In a traditional secure messaging approach the security is a property of the pla
       <section id="messagingDescription">
         <h4>Description</h4>
         <p>
-          Samira is a humanitarian aid worker in Khartoum and wants to create connections with new people she
+          Samira is a humanitarian aid worker in Khartoum who wants to create connections with new people she
 		meets. She has a smartphone but doesn’t have any internet access in remote areas that she visits
 		in her line of work. Since she can’t use the internet, most of her preferred methods of communication
 		are unavailable. When she meets a new person she wishes to communicate with, she establishes a
@@ -1711,7 +1711,7 @@ In a traditional secure messaging approach the security is a property of the pla
 		DID and start sharing messages secured by the keys referenced in her DID Document, which is served from
 		her device. She can maintain these secure connections whether she has access to the internet or not.
 		Whenever Samira is working on a new campaign or wants to raise awareness about issues affecting her
-		local region, she is able to securely communicate with all of the relevant parties, regardless of
+		local region, she is able to securely communicate with all relevant parties, regardless of
 		the device, platform, or network infrastructure they are using.
         </p>
         <p>
